Addkubernetes manifes yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,41 @@
-image: node:latest
+# image: node:latest
+
+# stages:
+#   - build
+#   - test
+
+# cache:
+#   paths:
+#     - node_modules/
+
+# install_dependencies:
+#   stage: build
+#   script:
+#     - npm install
+
+# testing:
+#   stage: test
+#   script: npm run test:ci
+
 
 stages:
-  - build
-  - test
-
-cache:
-  paths:
-    - node_modules/
-
-install_dependencies:
-  stage: build
+  - containerization
+#  - deploy
+containerization:
+  stage: containerization # must match the stage name declared above
   script:
-    - npm install
-
-testing:
-  stage: test
-  script: npm run test:ci
+    # Build the container image
+    - docker build -t yairmontes/docker_app .
+    # Push the container image to the registry
+    - docker push yairmontes/docker_app
+    # Cleanup by removing the local image
+    - docker image rm yairmontes/docker_app
+# deployment:
+#   stage: deploy # must match the stage name declared above
+#   script:
+#     # create/update the kubernetes resources
+#     - kubectl apply -f kubernetes_manifest.yml
+#     # Restart the deployment so as to pull the latest version of the container image
+#     - kubectl rollout restart deployment/docker_app
+#   environment:
+#     name: production
