--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ stages:
 
 before_script:
  - apt-get update
- - sudo apt install docker.io
+ - apt install docker.io
 
 containerization:
   stage: containerization # must match the stage name declared above
