--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,8 @@ containerization:
   stage: containerization # must match the stage name declared above
   image: gitlab/dind
   script:
+    # Add docker-hub credentials 
+    - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
     # Build the container image
     - docker build -t docker_app .
     # Add Tag
