--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,14 @@
 
 image: node:latest
 stages:
+  - build
   - containerization
 #  - deploy
 
+testing:
+  stage: build
+  script: npm run test:ci
+  
 containerization:
   stage: containerization # must match the stage name declared above
   image: gitlab/dind
@@ -37,6 +42,7 @@ containerization:
     - docker push yairmontes/docker_app
     # Cleanup by removing the local image
     #- docker image rm yairmontes/docker_app
+
 # deployment:
 #   stage: deploy # must match the stage name declared above
 #   script:
