Add build stage fixed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ install_dependencies:
     - npm install
 
 testing:
-  stage: build
+  stage: test
   script: npm run test:ci
 
 containerization:
