--- a/kubernetes_manifes.yml
+++ b/kubernetes_manifes.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: docker_app
-        image: my-registry/docker_app:latest
+        image: $DOCKER_HUB_USER/docker_app:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
