--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ containerization:
   image: docker:latest
   script:
     # Add docker-hub credentials 
-    - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+    - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD --password-stdin
     # Build the container image
     - docker build -t docker_app .
     # Add Tag
