--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ containerization:
   image: docker:latest
   stage: containerization # must match the stage name declared above
   #image: gitlab/dind
-  before-script:
+  before_script:
     # Add docker-hub credentials 
     - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
   script:
