--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,8 @@ containerization:
   #image: gitlab/dind
   before_script:
     # Add docker-hub credentials 
-    - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+    #- docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+    - echo "$DOCKER_HUB_PASSWORD" docker login -u $DOCKER_HUB_USER --password-stdin
   script:
     # Build the container image
     - docker build -t docker_app .
