--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ containerization:
   before_script:
     # Add docker-hub credentials 
     #- docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-    - echo "$DOCKER_HUB_PASSWORD" docker login -u $DOCKER_HUB_USER --password-stdin
+    - echo "$DOCKER_HUB_PASSWORD" | docker login -u $DOCKER_HUB_USER --password-stdin
   script:
     # Build the container image
     - docker build -t docker_app .
