--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,7 @@ containerization:
     #- docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
     - echo "$DOCKER_HUB_PASSWORD" | docker login -u $DOCKER_HUB_USER --password-stdin
   script:
+    - systemctl start docker
     # Build the container image
     - docker build -t docker_app .
     # Add Tag
