--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ containerization:
     #- docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
     - echo "$DOCKER_HUB_PASSWORD" | docker login -u $DOCKER_HUB_USER --password-stdin
   script:
-    - systemctl start docker
+    #- systemctl start docker
     # Build the container image
     - docker build -t docker_app .
     # Add Tag
