--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ containerization:
   services:
     - docker:dind
   variables:
-    DOCKER_HOST: tcp://localhost:31234
+    DOCKER_HOST: https://index.docker.io/v1/
     DOCKER_TLS_CERTDIR: ""
   before_script:
     # Add docker-hub credentials 
@@ -58,20 +58,20 @@ containerization:
   script:
     #- systemctl start docker
     # Build the container image
-    - docker build -t docker_app .
+    - docker build --pull -t docker .
     # Add Tag
-    - docker tag docker_app yairmontes/docker_app
+    - docker tag docker yairmontes/docker
     # Push the container image to the registry
-    - docker push yairmontes/docker_app
+    - docker push yairmontes/docker
     # Cleanup by removing the local image
-    #- docker image rm yairmontes/docker_app
+    #- docker image rm yairmontes/docker
   #variables to deploy -- new
 
 deployment:
   stage: deploy # must match the stage name declared above
   image: bitnami/kubectl
   script:
-    - kubectl get deploment docker_app || kubectl create deployment docker_app --image="yairmontes/docker_app"
+    - kubectl get deploment docker_app || kubectl create deployment docker_app --image="yairmontes/docker"
     # create/update the kubernetes resources
     #- kubectl apply -f kubernetes_manifest.yml
     # Restart the deployment so as to pull the latest version of the container image
