--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,11 +58,11 @@ containerization:
   script:
     #- systemctl start docker
     # Build the container image
-    - docker build --pull -t yairmontes/docker .
+    - docker build --pull -t docker .
     # Add Tag
-    - docker tag docker yairmontes/docker
+    - docker tag docker yairmontes/docker_app
     # Push the container image to the registry
-    - docker push yairmontes/docker
+    - docker push docker_app
     # Cleanup by removing the local image
     #- docker image rm yairmontes/docker
   #variables to deploy -- new
