--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ containerization:
     # Add Tag
     - docker tag docker yairmontes/docker_app
     # Push the container image to the registry
-    - docker push docker_app
+    - docker push yairmontes/docker_app
     # Cleanup by removing the local image
     #- docker image rm yairmontes/docker
   #variables to deploy -- new
