--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ testing:
   script: npm run test:ci
 
 containerization:
-  image: docker:latest
+  image: docker:dind
   #image: gitlab/dind
   stage: containerization # must match the stage name declared above
   services:
