--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ containerization:
     # Add Tag
     - docker tag docker "$CI_REGISTRY_IMAGE"
     # Push the container image to the registry
-    - docker push "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE"
+    - docker push "$CI_REGISTRY_IMAGE"
     # Cleanup by removing the local image
     #- docker image rm yairmontes/docker
   #variables to deploy -- new
