--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ containerization:
     # Build the container image
     - docker build --pull -t "$CI_REGISTRY_IMAGE" .
     # Add Tag
-    - docker tag $CI_REGISTRY_IMAGE" "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
+    - docker tag $CI_REGISTRY_IMAGE" "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA" .
     # Push the container image to the registry
     - docker push "$CI_REGISTRY_IMAGE"
     # Cleanup by removing the local image
