--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ testing:
   script: npm run test:ci
 
 containerization:
-  image: docker:dind
+  image: docker:latest
   #image: gitlab/dind
   stage: containerization # must match the stage name declared above
   services:
@@ -60,9 +60,9 @@ containerization:
     # Build the container image
     - docker build --pull -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA" .
     # Add Tag
-    - docker tag $CI_REGISTRY_IMAGE" "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
+    #- docker tag $CI_REGISTRY_IMAGE" "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
     # Push the container image to the registry
-    - docker push "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
+    #- docker push "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
     # Cleanup by removing the local image
     #- docker image rm yairmontes/docker
   #variables to deploy -- new
