--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,9 +48,9 @@ containerization:
   stage: containerization # must match the stage name declared above
   services:
     - docker:dind
-  # variables:
-  #   DOCKER_HOST: tcp://localhost:2375
-  #   DOCKER_TLS_CERTDIR: ""
+  variables:
+     DOCKER_HOST: tcp://localhost:2375
+     DOCKER_TLS_CERTDIR: ""
   before_script:
     # Add docker-hub credentials 
     #- docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
@@ -67,14 +67,15 @@ containerization:
     #- docker image rm yairmontes/docker
   #variables to deploy -- new
 
-deployment:
-  stage: deploy # must match the stage name declared above
-  image: bitnami/kubectl
-  script:
-    - kubectl get deploment "$CI_REGISTRY_IMAGE" || kubectl create deployment "$CI_REGISTRY_IMAGE" --image="yairmontes/docker"
-    # create/update the kubernetes resources
-    #- kubectl apply -f kubernetes_manifest.yml
-    # Restart the deployment so as to pull the latest version of the container image
-    #- kubectl rollout restart deployment/docker_app
-  environment:
-    name: production
+
+# deployment:
+#   stage: deploy # must match the stage name declared above
+#   image: bitnami/kubectl
+#   script:
+#     - kubectl get deploment "$CI_REGISTRY_IMAGE" || kubectl create deployment "$CI_REGISTRY_IMAGE" --image="yairmontes/docker"
+#     # create/update the kubernetes resources
+#     #- kubectl apply -f kubernetes_manifest.yml
+#     # Restart the deployment so as to pull the latest version of the container image
+#     #- kubectl rollout restart deployment/docker_app
+#   environment:
+#     name: production
