--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,9 +48,9 @@ containerization:
   stage: containerization # must match the stage name declared above
   services:
     - docker:dind
-  # variables:
+  variables:
   #    DOCKER_HOST: tcp://localhost:2375
-  #    DOCKER_TLS_CERTDIR: ""
+      DOCKER_TLS_CERTDIR: ""
   before_script:
     # Add docker-hub credentials 
     #- docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
