--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,11 +58,11 @@ containerization:
     - docker build --pull -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA" .
     # Add Tag
     #- docker tag $CI_REGISTRY_IMAGE" "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
-    - docker tag $CI_REGISTRY_IMAGE" yairmontes/"$CI_REGISTRY_IMAGE"
+    - docker tag docker_app yairmontes/docker_app
     # Push the container image to the registry
-    - docker push yairmontes/"$CI_REGISTRY_IMAGE"
+    - docker push yairmontes/docker_app
     # Cleanup by removing the local image
-    - docker image rm yairmontes/"$CI_REGISTRY_IMAGE"
+    #- docker image rm yairmontes/"$CI_REGISTRY_IMAGE"
   #variables to deploy -- new
   variables:
   #    DOCKER_HOST: tcp://localhost:2375
