--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,8 @@ containerization:
   script:
     #- systemctl start docker
     # Build the container image
-    - docker build --pull -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA" .
+    #- docker build --pull -t "$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA" .
+    - docker build --pull -t docker_app .
     # Add Tag
     #- docker tag $CI_REGISTRY_IMAGE" "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
     - docker tag docker_app yairmontes/docker_app
