--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ containerization:
     #- docker tag docker_app yairmontes/docker_app
     # Push the container image to the registry
     #- docker push yairmontes/docker_app
-    - docker push "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE"
+    - docker push "$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
     # Cleanup by removing the local image
     #- docker image rm yairmontes/"$CI_REGISTRY_IMAGE"
   #variables to deploy -- new
