--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ containerization:
 
 deployment:
   stage: deploy # must match the stage name declared above
-  image: bitnami/kubectl
+  image: bitnami/kubectl:1.14
   script:
     - kubectl get deploment hola-node || kubectl create deployment hola-node --image="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
     - kubectl set image deployment/hola-node hola-node="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
