--- a/kubernetes_manifest.yml
+++ b/kubernetes_manifest.yml
@@ -2,20 +2,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: $CI_REGISTRY_IMAGE
+  name: "$CI_REGISTRY_IMAGE"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: $CI_REGISTRY_IMAGE
+      app: "$CI_REGISTRY_IMAGE"
   template:
     metadata:
       labels:
-        app: $CI_REGISTRY_IMAGE
+        app: "$CI_REGISTRY_IMAGE"
     spec:
       containers:
-      - name: $CI_REGISTRY_IMAGE
-        image: $DOCKER_HUB_USER/$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+      - name: "$CI_REGISTRY_IMAGE"
+        image: "$DOCKER_HUB_USER/$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA"
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -25,11 +25,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: $CI_REGISTRY_IMAGE
+  name: "$CI_REGISTRY_IMAGE"
 spec:
   ports:
   - port: 8080
     nodePort: 31234
   selector:
-    app: $CI_REGISTRY_IMAGE
+    app: "$CI_REGISTRY_IMAGE"
   type: NodePort
