--- a/kubernetes_manifest.yml
+++ b/kubernetes_manifest.yml
@@ -2,20 +2,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "$CI_REGISTRY_IMAGE"
+  name: docker_app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: "$CI_REGISTRY_IMAGE"
+      app: docker_app
   template:
     metadata:
       labels:
-        app: "$CI_REGISTRY_IMAGE"
+        app: docker_app
     spec:
       containers:
-      - name: "$CI_REGISTRY_IMAGE"
-        image: "$DOCKER_HUB_USER/$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA"
+      - name: docker_app
+        image: yairmontes/docker_app:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -25,11 +25,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: "$CI_REGISTRY_IMAGE"
+  name: docker_app
 spec:
   ports:
   - port: 8080
     nodePort: 31234
   selector:
-    app: "$CI_REGISTRY_IMAGE"
+    app: docker_app
   type: NodePort
