Modify deployment step

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,33 +71,33 @@ containerization:
       DOCKER_TLS_CERTDIR: ""
 
 
-# deployment:
-#   stage: deploy # must match the stage name declared above
-#   image: 
-#     name: bitnami/kubectl:1.14
-#     entrypoint: [""]
-#   script:
-#     # create/update the kubernetes resources
-#     - kubectl apply -f kubernetes_manifest.yml
-#     # Restart the deployment so as to pull the latest version of the container image
-#     #- kubectl rollout restart yairmontes/docker-app
-#   environment:
-#     name: production
-
-
 deployment:
   stage: deploy # must match the stage name declared above
   image: 
     name: bitnami/kubectl:1.14
     entrypoint: [""]
   script:
-    - kubectl get deployment docker-app || kubectl create deployment docker-app --image="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
-    - kubectl set image yairmontes/docker-app docker-app="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
     # create/update the kubernetes resources
-    #- kubectl apply -f kubernetes_manifest.yml
+    - kubectl apply -f kubernetes_manifest.yml
     # Restart the deployment so as to pull the latest version of the container image
-    #- kubectl rollout restart deployment/docker-app
-  only: 
-    - master
+    #- kubectl rollout restart yairmontes/docker-app
   environment:
     name: production
+
+
+# deployment:
+#   stage: deploy # must match the stage name declared above
+#   image: 
+#     name: bitnami/kubectl:1.14
+#     entrypoint: [""]
+#   script:
+#     - kubectl get deployment docker-app || kubectl create deployment docker-app --image="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
+#     - kubectl set image yairmontes/docker-app docker-app="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
+#     # create/update the kubernetes resources
+#     #- kubectl apply -f kubernetes_manifest.yml
+#     # Restart the deployment so as to pull the latest version of the container image
+#     #- kubectl rollout restart deployment/docker-app
+#   only: 
+#     - master
+#   environment:
+#     name: production
