Modify deployment step

--- a/kubernetes_manifest.yml
+++ b/kubernetes_manifest.yml
@@ -38,7 +38,7 @@ spec:
   ports:
     - port: 80
       targetPort: 80
-      protocol: TCP
+      #protocol: TCP
       name: http
   selector:
       app: docker-app
