--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,8 @@ deployment:
     name: bitnami/kubectl:1.14
     entrypoint: [""]
   script:
-    - kubectl get deployment docker-app || kubectl create deployment docker-app --image="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
+    #- kubectl get deployment docker-app || kubectl create deployment docker-app --image="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
+    - kubectl create deployment docker-app --image="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
     - kubectl set image deployment/docker-app docker-app="$DOCKER_HUB_USER"/"$CI_REGISTRY_IMAGE":"$CI_COMMIT_SHA"
     # create/update the kubernetes resources
     - kubectl apply -f kubernetes_manifest.yml
